GSSO-588 Add functionality to define allowed IP addresses for clients and an api to request defined IP-s for all clients
